--- a/package.json
+++ b/package.json
@@ -21,17 +21,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test tests/*.test.js --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "./node_modules/.bin/eslint src",
-    "lint-fixup": "./node_modules/.bin/eslint src --ext .js,.jsx --fix"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^5.1.0",
-    "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-react": "^7.10.0"
+    "enzyme-adapter-react-16": "^1.1.1"
   }
 }
